--- a/template/renovate.json5.jinja
+++ b/template/renovate.json5.jinja
@@ -4,5 +4,9 @@
     'github>fohte/renovate-config:base.json5',
     'github>fohte/renovate-config:node.json5',
   ],
+{% elif type == 'rust' %}  extends: [
+    'github>fohte/renovate-config:base.json5',
+    'github>fohte/renovate-config:rust.json5',
+  ],
 {% else %}  extends: ['github>fohte/renovate-config:base.json5'],
 {% endif %}}
