--- a/template/.mise.toml.jinja
+++ b/template/.mise.toml.jinja
@@ -5,7 +5,7 @@ lefthook = "2.0.12"
 actionlint = "1.7.9"
 bun = "1.3.5"
 "cargo:basefmt" = "0.1.0"
-{% if type not in ['node', 'rust'] -%}
+{% if type != 'node' -%}
 "npm:@commitlint/cli" = "20.2.0"
 "npm:prettier" = "3.7.4"
 {% endif -%}
