--- a/template/Cargo.toml.jinja
+++ b/template/Cargo.toml.jinja
@@ -8,3 +8,11 @@ thiserror = "=2.0.18"
 
 [dev-dependencies]
 rstest = "=0.26.1"
+
+[lints.clippy]
+allow_attributes = "warn"
+allow_attributes_without_reason = "warn"
+disallowed_macros = "deny"
+expect_used = "deny"
+panic = "deny"
+unwrap_used = "deny"
