--- a/template/lefthook.yml.jinja
+++ b/template/lefthook.yml.jinja
@@ -6,3 +6,11 @@ remotes:
 {%- if type == 'rust' %}
       - rust.yml
 {%- endif %}
+{%- if type == 'rust' %}
+
+pre-commit:
+  commands:
+    ast-grep:
+      glob: "*.rs"
+      run: ast-grep scan --rule .sg/rules/no-assert-contains.yml {staged_files}
+{%- endif %}
