--- a/template/.mise.toml.jinja
+++ b/template/.mise.toml.jinja
@@ -1,8 +1,8 @@
 [tools]
 lefthook = "2.0.16"
-{% if type == 'rust' -%}
+{%- if type == 'rust' %}
 "cargo:ast-grep" = "0.40.4"
-{% endif -%}
+{%- endif %}
 
 # lefthook hooks
 actionlint = "1.7.10"
