--- a/template/.github/workflows/release-please.yml.jinja
+++ b/template/.github/workflows/release-please.yml.jinja
@@ -103,15 +103,19 @@ jobs:
         run: cargo build --release --target {% raw %}${{ matrix.target }}{% endraw %}
 
       - name: Package binary
+        env:
+          PROJECT_NAME: {{ project_name }}
+          BINARY_NAME: {{ binary_name }}
         run: |
           cd target/{% raw %}${{ matrix.target }}{% endraw %}/release
-          tar czf ../../../{{ project_name }}-{% raw %}${{ matrix.target }}{% endraw %}.tar.gz {{ binary_name }}
+          tar czf ../../../"$PROJECT_NAME"-{% raw %}${{ matrix.target }}{% endraw %}.tar.gz "$BINARY_NAME"
 
       - name: Upload to release
         env:
           GH_TOKEN: {% raw %}${{ github.token }}{% endraw %}
           TAG_NAME: {% raw %}${{ inputs.tag_name || needs.release-please.outputs.tag_name }}{% endraw %}
+          PROJECT_NAME: {{ project_name }}
         run: |
           gh release upload "$TAG_NAME" \
-            {{ project_name }}-{% raw %}${{ matrix.target }}{% endraw %}.tar.gz
+            "$PROJECT_NAME"-{% raw %}${{ matrix.target }}{% endraw %}.tar.gz
 {%- endif %}
