--- a/template/lefthook.yml.jinja
+++ b/template/lefthook.yml.jinja
@@ -9,6 +9,6 @@ remotes:
 pre-commit:
   commands:
     ast-grep:
-      glob: "*.rs"
+      glob: '*.rs'
       run: ast-grep scan --rule .sg/rules/no-assert-contains.yml {staged_files}
 {%- endif %}
