--- a/template/renovate.json5.jinja
+++ b/template/renovate.json5.jinja
@@ -1,6 +1,14 @@
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-{% if type == 'node' %}  extends: [
+{% if subpackages %}
+  {% set types = subpackages | map(attribute='type') | reject('equalto', 'base') | unique | sort | list %}
+  extends: [
+    'github>fohte/renovate-config:base.json5',
+  {% for t in types %}
+    'github>fohte/renovate-config:{{ t }}.json5',
+  {% endfor %}
+  ],
+{% elif type == 'node' %}  extends: [
     'github>fohte/renovate-config:base.json5',
     'github>fohte/renovate-config:node.json5',
   ],
