--- a/template/.release-please-manifest.json.jinja
+++ b/template/.release-please-manifest.json.jinja
@@ -1,7 +1,7 @@
 {
 {%- if subpackages %}
 {% for pkg in subpackages %}
-  "{{ pkg.name }}": "0.1.0"{{ ',' if not loop.last else '' }}
+  {{ pkg.name | tojson }}: "0.1.0"{{ ',' if not loop.last else '' }}
 {% endfor -%}
 {% else %}
   ".": "0.1.0"
