--- a/template/release-please-config.json.jinja
+++ b/template/release-please-config.json.jinja
@@ -17,11 +17,11 @@
   "packages": {
 {%- if subpackages %}
 {% for pkg in subpackages %}
-    "{{ pkg.name }}": {
-      "release-type": "{{ pkg.release_type | default('simple') }}",
+    {{ pkg.name | tojson }}: {
+      "release-type": {{ (pkg.release_type | default('simple')) | tojson }},
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
-      "component": "{{ pkg.name }}"
+      "component": {{ pkg.name | tojson }}
     }{{ ',' if not loop.last else '' }}
 {% endfor -%}
 {% else %}
