--- a/template/lefthook.yml.jinja
+++ b/template/lefthook.yml.jinja
@@ -5,4 +5,10 @@ remotes:
       - base.yml
 {%- if type == 'rust' %}
       - rust.yml
+
+pre-commit:
+  commands:
+    ast-grep:
+      glob: '*.rs'
+      run: ast-grep scan --rule .sg/rules/no-assert-contains.yml {staged_files}
 {%- endif %}
