fix(template): fix extra blank lines in renovate.json5 for monorepo
The Jinja2 `{% if %}` and `{% set %}` blocks inside renovate.json5.jinja
produced extra blank lines in monorepo mode output. Move `set` to the
file header with `{%- -%}` whitespace control, and add `{%-` to `for`
and `endfor` to eliminate blank lines between extends entries.

--- a/template/renovate.json5.jinja
+++ b/template/renovate.json5.jinja
@@ -1,12 +1,11 @@
+{%- set types = subpackages | map(attribute='type') | reject('equalto', 'base') | unique | sort | list -%}
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-{% if subpackages %}
-  {% set types = subpackages | map(attribute='type') | reject('equalto', 'base') | unique | sort | list %}
-  extends: [
+{% if subpackages %}  extends: [
     'github>fohte/renovate-config:base.json5',
-  {% for t in types %}
+  {%- for t in types %}
     'github>fohte/renovate-config:{{ t }}.json5',
-  {% endfor %}
+  {%- endfor %}
   ],
 {% elif type == 'node' %}  extends: [
     'github>fohte/renovate-config:base.json5',
