--- a/template/lefthook.yml.jinja
+++ b/template/lefthook.yml.jinja
@@ -19,12 +19,12 @@ pre-commit:
 {%- for pkg in subpackages %}
 {%- if pkg.type == 'rust' %}
     cargo-fmt-{{ pkg.name }}:
-      root: "{{ pkg.name }}/"
-      glob: "{{ pkg.name }}/**/*.rs"
+      root: '{{ pkg.name }}/'
+      glob: '{{ pkg.name }}/**/*.rs'
       run: cargo fmt -- {staged_files} && git add {staged_files}
     cargo-clippy-{{ pkg.name }}:
-      root: "{{ pkg.name }}/"
-      glob: "{{ pkg.name }}/**/*.rs"
+      root: '{{ pkg.name }}/'
+      glob: '{{ pkg.name }}/**/*.rs'
       run: cargo clippy -- -D warnings
 {%- endif %}
 {%- endfor %}
