--- a/template/.mise.toml.jinja
+++ b/template/.mise.toml.jinja
@@ -8,8 +8,7 @@ lefthook = "2.0.16"
 actionlint = "1.7.10"
 bun = "1.3.8"
 "cargo:basefmt" = "0.1.0"
-{% set needs_node = (type == 'node') or (subpackages | selectattr('type', 'equalto', 'node') | list | length > 0) -%}
-{% if not needs_node -%}
+{% if type != 'node' -%}
 "npm:@commitlint/cli" = "20.4.0"
 "npm:prettier" = "3.8.1"
 {% endif -%}
