--- a/template/.github/workflows/test.yml.jinja
+++ b/template/.github/workflows/test.yml.jinja
@@ -262,11 +262,40 @@ jobs:
         run: cargo test
 {%- endif %}
 {%- elif subpackages %}
+
+  detect-changes:
+    runs-on: ubuntu-latest
+    outputs:
+{%- for pkg in subpackages if pkg.type in ['node', 'rust'] %}
+      {{ pkg.name }}: {% raw %}${{ steps.changes-{% endraw %}{{ pkg.name }}{% raw %}.outputs.any_changed }}{% endraw %}
+{%- endfor %}
+      workflow: {% raw %}${{ steps.changes-workflow.outputs.any_changed }}{% endraw %}
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 2
+{%- for pkg in subpackages if pkg.type in ['node', 'rust'] %}
+
+      - name: Check for {{ pkg.name }} changes
+        uses: tj-actions/changed-files@v47
+        id: changes-{{ pkg.name }}
+        with:
+          files: {{ pkg.name }}/**
+{%- endfor %}
+
+      - name: Check for workflow changes
+        uses: tj-actions/changed-files@v47
+        id: changes-workflow
+        with:
+          files: .github/workflows/test.yml
 {%- for pkg in subpackages if pkg.type in ['node', 'rust'] %}
 
   unit-test-{{ pkg.name }}:
+    needs: detect-changes
+    if: >-
+      needs.detect-changes.outputs.{{ pkg.name }} == 'true' ||
+      needs.detect-changes.outputs.workflow == 'true'
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v6
 {%- if pkg.type == 'rust' %}
