--- a/template/.mise.toml.jinja
+++ b/template/.mise.toml.jinja
@@ -3,7 +3,7 @@
 [tools]
 lefthook = "2.1.0"
 {%- if has_rust %}
-"cargo:ast-grep" = "0.40.5"
+"github:ast-grep/ast-grep" = "0.40.5"
 {%- endif %}
 
 # lefthook hooks
@@ -14,7 +14,7 @@ pnpm = "10.28.2"
 {%- else %}
 bun = "1.3.8"
 {%- endif %}
-"cargo:basefmt" = "0.1.0"
+"github:fohte/basefmt" = "0.1.0"
 {% if type != 'node' and not (monorepo_node_workspace | default(false)) -%}
 "npm:@commitlint/cli" = "20.4.1"
 "npm:prettier" = "3.8.1"
